<resources>
    <string name="app_name">Battle of wits</string>
    <string name="todo">TODO</string>
    <string name="entry">Войти</string>
    <string name="auth">Зарегистрироваться</string>
    <string name="login">Зайти через Facebook</string>
    <string name="get_data">Получить данные</string>
    <string name="new_game">Новая игра</string>
    <string name="create">Создать аккаунт</string>
    <string name="back">Назад</string>
    <string name="exit">Выход</string>
    <string name="cat_food">Кошка</string>
    <string name="theme">Темы</string>
    <string name="th">тема:</string>
    <string name="gamer">Игрок</string>
    <string name="gamertext" />
    <string name="game1">Кол-во игр</string>
    <string name="game1text" />
    <string name="rounds">Кол-во раундов</string>
    <string name="roundstext" />
    <string name="themes">Кол-во раундов</string>
    <string name="themestext" />
    <string name="theme_game">Выберите тему игры</string>
    <string name="question">Вопрос?</string>
    <string name="option1">Вариант 1</string>
    <string name="option2">Вариант 2</string>
    <string name="option3">Вариант 3</string>
    <string name="option4">Вариант 4</string>
    <string name="reply">Ответить</string>
    <string name="title_activity_test">title_activity_test</string>
    <string name="title_activity_second">title_activity_second</string>
    <string name="password">Пароль</string>
    <string name="login_text">E-mail</string>
    <string name="name_text">Имя</string>
    <string name="_18">18</string>
    <string name="marafon">Марафон</string>
    <string name="marathon">Марафон</string>
    <string name="duel">Дуэль</string>
    <string name="your_turn">ВАШ ХОД (0)</string>
    <string name="your_turn_sm">Ваш ход</string>
    <string name="score">9:12</string>
    <string name="_0">(0)</string>
    <string name="waiting_opponent">ЖДЁМ СОПЕРНИКА (0)</string>
    <string name="start">Старт:</string>
    <string name="finish">Финиш: не закончена</string>
    <string name="round">Раунд:</string>
</resources>
