<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".ui.QuestionActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05"
        app:layout_constraintGuide_begin="293dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/question"
        android:textSize="26sp"
        android:gravity="center"
        android:textColor="@color/backgroundLoginButtonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <RadioGroup
        android:id="@+id/options"
        android:layout_width="318dp"
        android:layout_height="530dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question">

        <RadioButton
            android:id="@+id/option0"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:text="@string/option1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/options" />

        <RadioButton
            android:id="@+id/option1"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:text="@string/option2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option0" />

        <RadioButton
            android:id="@+id/option2"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:text="@string/option3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option1" />

        <RadioButton
            android:id="@+id/option3"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:text="@string/option4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option2" />

    </RadioGroup>

    <Button
        android:id="@+id/send_answer"
        style="@style/LoginViaFacebookButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/login_button_selector"
        android:hint="@string/reply"
        android:text="@string/reply"
        app:layout_constraintBottom_toTopOf="@+id/fromProgress"
        app:layout_constraintHeight_max="57dp"
        app:layout_constraintHeight_min="30dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fromProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"
        app:layout_constraintGuide_begin="293dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>