<?xml version="1.0" encoding="utf-8"?><!--<LinearLayout-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="81dp"
    android:minHeight="81dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorBackgroundCenter"
        android:baselineAligned="false"
        android:minHeight="80dp"
        android:orientation="horizontal"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="65dp"
                android:layout_height="55dp"
                android:contentDescription="TODO"
                android:src="@drawable/image" />

            <TextView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:text="Михаил"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/listView1_1"
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:gravity="center"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:text="@string/your_turn_sm"
                android:textColor="@color/BlackLite5" />

            <TextView
                android:id="@+id/listView1_2"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:gravity="center"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:text="@string/score"
                android:textColor="@android:color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/listView1_3"
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:gravity="center"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:text="dsdffsf"
                android:textColor="@color/Black"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/start"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:gravity="center"
                android:paddingTop="0dp"
                android:paddingEnd="10dp"
                android:paddingBottom="0dp"
                android:layout_marginTop="8dp"
                android:text="@string/start"
                android:textAlignment="textEnd"
                android:textColor="@color/BlackLite4"
                android:textSize="11dp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/finish"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:gravity="center"
                android:paddingTop="0dp"
                android:paddingEnd="10dp"
                android:paddingBottom="0dp"
                android:text="@string/finish"
                android:textAlignment="textEnd"
                android:textColor="@color/BlackLite4"
                android:textSize="11dp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/round"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:gravity="center"
                android:paddingTop="0dp"
                android:paddingEnd="10dp"
                android:paddingBottom="0dp"
                android:text="@string/round"
                android:textAlignment="textEnd"
                android:textColor="@color/BlackLite4"
                android:textSize="11dp"
                tools:ignore="RtlCompat" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBackgroundCreate"
        android:baselineAligned="false"
        android:minHeight="1dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>