<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="75dp"
        app:layout_constraintGuide_percent="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/image"
            app:civ_border_color="@color/backgroundBlue"
            app:civ_border_width="1dp"
            app:layout_constraintBottom_toTopOf="@id/guideline" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:text="@string/theme"
            android:textColor="@android:color/white"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/qty_themes"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            style="@style/themes"
            android:layout_marginStart="-64dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:text=""
            android:textColor="@android:color/white"
            android:background="@drawable/circle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/marathon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/marathon"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/duel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/duel"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline_70"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:ignore="MissingConstraints">

        <ExpandableListView
            android:id="@+id/expendableList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/background_light"
            android:dividerHeight="0.5dp" />

    </RelativeLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back"
        style="@style/CreateButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/create_button_selector"
        android:hint="@string/exit"
        android:text="@string/exit"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_max="57dp"
        app:layout_constraintHeight_min="30dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_70"
        app:layout_constraintVertical_bias="0.927" />

</androidx.constraintlayout.widget.ConstraintLayout>